Trying to fix disappearing element after flip on IOS

--- a/portfolio.css
+++ b/portfolio.css
@@ -44,11 +44,11 @@ Icterine- #FEF65B;
     transform: rotateY(0) scale(1.5);
   }
   100% {
-    -webkit-transform: rotateY(180deg) scale(1.5);
-    -moz-transform: rotateY(180deg) scale(1.5);
-    -ms-transform: rotateY(180deg) scale(1.5);
-    -o-transform: rotateY(180deg) scale(1.5);
-    transform: rotateY(180deg) scale(1.5);
+    -webkit-transform: translate(0, 0) rotateY(180deg) scale(1.5);
+    -moz-transform: translate(0, 0) rotateY(180deg) scale(1.5);
+    -ms-transform: translate(0, 0) rotateY(180deg) scale(1.5);
+    -o-transform: translate(0, 0) rotateY(180deg) scale(1.5);
+    transform: translate(0, 0) rotateY(180deg) scale(1.5);
   }
 }
 
